--- a/he/Contact/index.html
+++ b/he/Contact/index.html
@@ -4,47 +4,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>RankMind | יצירת קשר</title>
-
-  <!-- Primary SEO -->
-  <meta name="description" content="רוצים לשמוע איפה אתם מפספסים תנועה ולידים? דברו עם RankMind לייעוץ ראשוני ללא התחייבות: SEO, נראות ב-ChatGPT/Gemini, פרסום ממומן ואתר מהיר שממיר." />
-  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta name="robots" content="index,follow" />
   <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="he" />
 
-  <!-- Canonical -->
+  <title>יצירת קשר | SEO ונראות ב-AI (AEO) | RankMind</title>
+  <meta name="description"
+    content="רוצים לדעת איפה אתם מפספסים תנועה ולידים? דברו עם RankMind לייעוץ ראשוני ללא התחייבות: SEO, נראות ב-AI (AEO), פרסום ממומן ואתר מהיר שממיר." />
+
   <link rel="canonical" href="https://www.rankmind.net/he/Contact/" />
 
-  <!-- Language targeting -->
-  <link rel="alternate" href="https://www.rankmind.net/Contact/" hreflang="en" />
-  <link rel="alternate" href="https://www.rankmind.net/he/Contact/" hreflang="he" />
-  <link rel="alternate" href="https://www.rankmind.net/Contact/" hreflang="x-default" />
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Contact/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Contact/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Contact/" />
 
-  <!-- Open Graph -->
   <meta property="og:site_name" content="RankMind" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="he_IL" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:title" content="RankMind | יצירת קשר" />
-  <meta property="og:description" content="דברו איתנו על המטרות שלכם: SEO, נראות בעידן ה-AI, פרסום ממומן ואתרים מהירים בקוד נקי." />
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
-  <meta property="og:image:alt" content="RankMind - יצירת קשר" />
+  <meta property="og:description"
+    content="דברו איתנו על המטרות שלכם: SEO, נראות ב-AI (AEO), פרסום ממומן ואתרים מהירים בקוד נקי." />
   <meta property="og:url" content="https://www.rankmind.net/he/Contact/" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - יצירת קשר" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="RankMind | יצירת קשר" />
-  <meta name="twitter:description" content="ייעוץ ראשוני ללא התחייבות: נבדוק איפה אתם מפספסים תנועה, ומה אפשר לעשות כבר עכשיו." />
+  <meta name="twitter:description"
+    content="ייעוץ ראשוני ללא התחייבות: נבדוק איפה אתם מפספסים תנועה ואיך לשפר תוצאות." />
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
 
-  <meta name="theme-color" content="#222222" />
-  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="../../Styles/ui.css" />
   <link rel="stylesheet" href="../../Styles/pages.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
   <link rel="stylesheet" href="../he.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "he"
+  }
+  </script>
+
+  <!-- Structured Data: ContactPage -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "@id": "https://www.rankmind.net/he/Contact/#contact",
+    "url": "https://www.rankmind.net/he/Contact/",
+    "name": "יצירת קשר - RankMind",
+    "isPartOf": { "@id": "https://www.rankmind.net/#website" },
+    "inLanguage": "he"
+  }
+  </script>
 </head>
 
 <body>
