--- a/he/Pricing/index.html
+++ b/he/Pricing/index.html
@@ -4,49 +4,89 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>RankMind | תמחור שירותי SEO ושיווק דיגיטלי בעידן ה-AI</title>
-
-  <!-- Primary SEO -->
-  <meta name="description" content="תמחור שקוף לשירותי RankMind: קידום אתרים (SEO), נראות ב-ChatGPT/Gemini, פרסום ממומן ואתרים מהירים בקוד נקי. מתאים לעסקים בישראל ובארה״ב, וגם לעבודה גלובלית." />
-  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta name="robots" content="index,follow" />
   <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="he" />
 
-  <!-- Canonical -->
+  <title>תמחור שירותי SEO ונראות ב-AI (AEO) | RankMind</title>
+  <meta name="description"
+    content="תמחור שקוף לשירותי RankMind: קידום אתרים (SEO), נראות ב-AI (AEO) וב-ChatGPT/Gemini, פרסום ממומן ואתרים מהירים בקוד נקי שממיר. מתאים לעסקים בישראל, ארה״ב ועבודה גלובלית." />
+
   <link rel="canonical" href="https://www.rankmind.net/he/Pricing/" />
 
-  <!-- Language targeting -->
-  <link rel="alternate" href="https://www.rankmind.net/Pricing/" hreflang="en" />
-  <link rel="alternate" href="https://www.rankmind.net/he/Pricing/" hreflang="he" />
-  <link rel="alternate" href="https://www.rankmind.net/Pricing/" hreflang="x-default" />
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Pricing/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Pricing/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Pricing/" />
 
-  <!-- Open Graph -->
   <meta property="og:site_name" content="RankMind" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="he_IL" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:title" content="RankMind | תמחור" />
-  <meta property="og:description" content="בחרו מסלול צמיחה: SEO, נראות בעידן ה-AI, פרסום ממומן ואתר מהיר שממיר — עם תהליך ברור ושקיפות מלאה." />
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
-  <meta property="og:image:alt" content="RankMind - תמחור שירותי קידום ושיווק" />
+  <meta property="og:description"
+    content="בחרו מסלול צמיחה: SEO, נראות ב-AI (AEO), פרסום ממומן ואתר מהיר שממיר — עם תהליך ברור ושקיפות מלאה." />
   <meta property="og:url" content="https://www.rankmind.net/he/Pricing/" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - תמחור שירותי SEO ונראות ב-AI" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="RankMind | תמחור" />
-  <meta name="twitter:description" content="תמחור שקוף למסלולי SEO ושיווק בעידן ה-AI — מותאם לעסקים בישראל, ארה״ב וגלובלי." />
+  <meta name="twitter:description"
+    content="תמחור שקוף למסלולי SEO ונראות ב-AI (AEO) — מותאם לעסקים בישראל, ארה״ב וגלובלי." />
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
 
-  <meta name="theme-color" content="#222222" />
-  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="../../Styles/ui.css" />
   <link rel="stylesheet" href="../../Styles/pages.css" />
-  <!-- Reuse the existing Pricing styles -->
   <link rel="stylesheet" href="../../Pricing/pricing.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
   <link rel="stylesheet" href="../he.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "he"
+  }
+  </script>
+
+  <!-- Structured Data: OfferCatalog (Pricing page) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "OfferCatalog",
+    "@id": "https://www.rankmind.net/he/Pricing/#catalog",
+    "name": "מסלולי תמחור - RankMind",
+    "url": "https://www.rankmind.net/he/Pricing/",
+    "provider": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "he"
+  }
+  </script>
 </head>
 
 <body>
