--- a/he/Services/index.html
+++ b/he/Services/index.html
@@ -4,49 +4,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>RankMind | שירותי קידום אתרים ושיווק דיגיטלי בעידן ה-AI</title>
-
-  <!-- Primary SEO -->
-  <meta name="description" content="שירותי RankMind: קידום אתרים (SEO), נראות ב-ChatGPT/Gemini, Google Ads, Meta Ads, מיתוג ותוכן, וכלים להמרה כמו צ’אטבוט — עם אתרים מהירים בקוד נקי." />
-  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta name="robots" content="index,follow" />
   <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="he" />
 
-  <!-- Canonical -->
+  <title>שירותי קידום אתרים (SEO) ונראות ב-AI (AEO) | RankMind</title>
+  <meta name="description"
+    content="שירותי RankMind: קידום אתרים (SEO), נראות ב-AI (AEO) וב-ChatGPT/Gemini, פרסום ממומן, תוכן ואסטרטגיה — עם אתרים מהירים בקוד נקי שממירים." />
+
   <link rel="canonical" href="https://www.rankmind.net/he/Services/" />
 
-  <!-- Language targeting -->
-  <link rel="alternate" href="https://www.rankmind.net/Services/" hreflang="en" />
-  <link rel="alternate" href="https://www.rankmind.net/he/Services/" hreflang="he" />
-  <link rel="alternate" href="https://www.rankmind.net/Services/" hreflang="x-default" />
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Services/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Services/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Services/" />
 
-  <!-- Open Graph -->
   <meta property="og:site_name" content="RankMind" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="he_IL" />
   <meta property="og:locale:alternate" content="en_US" />
-  <meta property="og:title" content="RankMind | שירותים" />
-  <meta property="og:description" content="SEO, נראות בעידן ה-AI, פרסום ממומן, מיתוג ותוכן, וכלים להמרה — הכל במקום אחד." />
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
-  <meta property="og:image:alt" content="RankMind - שירותי קידום אתרים ושיווק דיגיטלי" />
+  <meta property="og:title" content="RankMind | שירותי קידום אתרים ונראות ב-AI" />
+  <meta property="og:description"
+    content="SEO, נראות ב-AI (AEO), פרסום ממומן, תוכן וכלים להמרה — הכל עם אסטרטגיה שמביאה תוצאות." />
   <meta property="og:url" content="https://www.rankmind.net/he/Services/" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - שירותי קידום אתרים ונראות ב-AI" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="RankMind | שירותים" />
-  <meta name="twitter:description" content="קידום אתרים, נראות ב-AI, פרסום ממומן, מיתוג וכלים להמרה — מותאם לעסק שלכם." />
+  <meta name="twitter:title" content="RankMind | שירותי קידום אתרים ונראות ב-AI" />
+  <meta name="twitter:description"
+    content="קידום אתרים (SEO), נראות ב-AI (AEO), פרסום ממומן ותוכן — מותאם לעסק שלכם." />
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
 
-  <meta name="theme-color" content="#222222" />
-  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="../../Styles/ui.css" />
   <link rel="stylesheet" href="../../Styles/pages.css" />
-  <!-- Reuse the existing Services styles -->
   <link rel="stylesheet" href="../../Services/services.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
   <link rel="stylesheet" href="../he.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "he"
+  }
+  </script>
+
+  <!-- Structured Data: Service -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "@id": "https://www.rankmind.net/he/Services/#service",
+    "name": "שירותי קידום אתרים ונראות ב-AI",
+    "serviceType": [
+      "SEO",
+      "AEO",
+      "נראות ב-AI",
+      "פרסום ממומן",
+      "תוכן ואסטרטגיה"
+    ],
+    "provider": { "@id": "https://www.rankmind.net/#organization" },
+    "url": "https://www.rankmind.net/he/Services/",
+    "inLanguage": "he"
+  }
+  </script>
 </head>
 
 <body>
