--- a/he/index.html
+++ b/he/index.html
@@ -1,51 +1,78 @@
+<!-- /he/index.html -->
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>RankMind | קידום אתרים (SEO) ושיווק בעידן ה-AI</title>
-
-  <!-- Primary SEO -->
-  <meta name="description" content="RankMind עוזרת לעסקים לצמוח אונליין עם קידום אתרים (SEO), AEO ונראות ב-ChatGPT/Gemini, לצד בניית אתרים מהירים בקוד נקי שממיר." />
-  <meta name="robots" content="index, follow, max-image-preview:large" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow" />
   <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="he" />
 
-  <!-- Canonical -->
+  <title>RankMind | קידום אתרים (SEO) ונראות ב-AI (AEO)</title>
+  <meta name="description"
+    content="RankMind עוזרת לעסקים לצמוח עם קידום אתרים (SEO), נראות ב-AI (AEO) ובכלים כמו ChatGPT/Gemini, לצד אתרים מהירים בקוד נקי שממיר." />
+
   <link rel="canonical" href="https://www.rankmind.net/he/" />
 
-  <!-- Language targeting (SEO) -->
-  <link rel="alternate" href="https://www.rankmind.net/" hreflang="en" />
-  <link rel="alternate" href="https://www.rankmind.net/he/" hreflang="he" />
-  <link rel="alternate" href="https://www.rankmind.net/" hreflang="x-default" />
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/" />
 
-  <!-- Open Graph -->
   <meta property="og:site_name" content="RankMind" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="he_IL" />
   <meta property="og:locale:alternate" content="en_US" />
-  <meta property="og:title" content="RankMind | קידום אתרים ושיווק בעידן ה-AI" />
-  <meta property="og:description" content="SEO + AEO + נראות ב-ChatGPT/Gemini ובגוגל — עם אתרים מהירים בקוד נקי ואסטרטגיה שמביאה תוצאות." />
+  <meta property="og:title" content="RankMind | קידום אתרים (SEO) ונראות ב-AI (AEO)" />
+  <meta property="og:description"
+    content="SEO + נראות ב-AI (AEO) + אסטרטגיה שמביאה תוצאות — ובנוסף אתר מהיר בקוד נקי שממיר." />
   <meta property="og:url" content="https://www.rankmind.net/he/" />
   <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
-  <meta property="og:image:alt" content="RankMind - קידום אתרים ושיווק בעידן ה-AI" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - קידום אתרים ונראות ב-AI" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="RankMind | קידום אתרים ושיווק בעידן ה-AI" />
-  <meta name="twitter:description" content="הצמיחו את העסק עם SEO, AEO ונראות בכלי AI — לצד אתר מהיר שממיר." />
+  <meta name="twitter:title" content="RankMind | קידום אתרים (SEO) ונראות ב-AI (AEO)" />
+  <meta name="twitter:description" content="הצמיחו את העסק עם SEO, נראות ב-AI (AEO) ואתר מהיר שממיר." />
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
 
-  <!-- UI -->
-  <meta name="theme-color" content="#222222" />
-  <link rel="icon" type="image/x-icon" href="../Images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="../Styles/ui.css" />
   <link rel="stylesheet" href="../Styles/pages.css" />
   <link rel="stylesheet" href="../Styles/index.css" />
   <link rel="stylesheet" href="../Styles/footer.css" />
   <link rel="stylesheet" href="./he.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "he"
+  }
+  </script>
 </head>
 
 <body>
