Adding long scroll effect to Our proccess section

--- a/index.html
+++ b/index.html
@@ -182,41 +182,43 @@
     </section>
 
     <section class="our-process">
-      <h2>Our Process</h2>
-      <div class="process-steps">
-        <div class="process-step">
-          <div class="step-circle">1</div>
-          <div class="step-content">
-            <h3>Discovery</h3>
-            <p>We start by understanding your business, your goals, and your local market challenges.</p>
+      <div class="our-process-inner">
+        <h2>Our Process</h2>
+        <div class="process-steps">
+          <div class="process-step">
+            <div class="step-circle">1</div>
+            <div class="step-content">
+              <h3>Discovery</h3>
+              <p>We start by understanding your business, your goals, and your local market challenges.</p>
+            </div>
           </div>
-        </div>
-        <div class="process-step">
-          <div class="step-circle">2</div>
-          <div class="step-content">
-            <h3>Strategy & SEO</h3>
-            <p>We plan a content and SEO strategy tailored for visibility on Google & AI platforms.</p>
+          <div class="process-step">
+            <div class="step-circle">2</div>
+            <div class="step-content">
+              <h3>Strategy & SEO</h3>
+              <p>We plan a content and SEO strategy tailored for visibility on Google & AI platforms.</p>
+            </div>
           </div>
-        </div>
-        <div class="process-step">
-          <div class="step-circle">3</div>
-          <div class="step-content">
-            <h3>Handcrafted Website</h3>
-            <p>We build your website from scratch with pure HTML, CSS, and JavaScript — no bloat.</p>
+          <div class="process-step">
+            <div class="step-circle">3</div>
+            <div class="step-content">
+              <h3>Handcrafted Website</h3>
+              <p>We build your website from scratch with pure HTML, CSS, and JavaScript — no bloat.</p>
+            </div>
           </div>
-        </div>
-        <div class="process-step">
-          <div class="step-circle">4</div>
-          <div class="step-content">
-            <h3>Launch & Optimize</h3>
-            <p>We launch your site, set up analytics, and fine-tune performance and visibility.</p>
+          <div class="process-step">
+            <div class="step-circle">4</div>
+            <div class="step-content">
+              <h3>Launch & Optimize</h3>
+              <p>We launch your site, set up analytics, and fine-tune performance and visibility.</p>
+            </div>
           </div>
-        </div>
-        <div class="process-step">
-          <div class="step-circle">5</div>
-          <div class="step-content">
-            <h3>Ongoing Support</h3>
-            <p>We provide continuous updates, content guidance, and expert advice as you grow.</p>
+          <div class="process-step">
+            <div class="step-circle">5</div>
+            <div class="step-content">
+              <h3>Ongoing Support</h3>
+              <p>We provide continuous updates, content guidance, and expert advice as you grow.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -359,10 +361,11 @@
           </ul>
         </div>
       </div>
-      <p class="footer-bottom">&copy; 2025 RankMind — All rights reserved.</p>
+      <p class="footer-bottom">&copy; 2025 RankMind - All rights reserved</p>
     </div>
   </footer>
 
   <script src="./Scripts/ui.js"></script>
+  <script src="./Scripts/scroll-scenes.js"></script>
 </body>
 </html>
